# python-project-52

./: .gitignore  Makefile  README.md  build.sh  db.sqlite3  pyproject.toml  ruff.toml
.github/workflows/: pyci.yml
locale/ru/LC_MESSAGES/: django.mo  django.po
task_manager/: context_processors.py  mixins.py  settings.py  urls.py  views.py
task_manager/fixtures/: label_data.json  labels.json  status_data.json  statuses.json  task_data.json  tasks.json  user_data.json  users.json
task_manager/labels/: forms.py  models.py  tests.py  urls.py  views.py
task_manager/labels/migrations/: 0001_initial.py
task_manager/statuses/: forms.py  models.py  tests.py  urls.py  views.py
task_manager/statuses/migrations/: 0001_initial.py  0002_status_created_at.py  0003_alter_status_name.py
task_manager/tasks/: forms.py  mixins.py  models.py  tests.py  urls.py  views.py
task_manager/tasks/migrations/: 0001_initial.py  0002_task_labels_alter_task_description_and_more.py  0003_alter_task_labels.py  0004_alter_task_labels.py
task_manager/templates/: base.html  base_create.html  base_delete.html  base_update.html  index.html
task_manager/templates/labels/: create.html  delete.html  list.html  update.html
task_manager/templates/registration/: login.html
task_manager/templates/statuses/: create.html  delete.html  list.html  update.html
task_manager/templates/tasks/: create.html  delete.html  detail.html  list.html  update.html
task_manager/templates/users/: create.html  delete.html  list.html  update.html
task_manager/users/: forms.py  mixins.py  tests.py  urls.py  views.py
task_manager/users/migrations/: 0001_initial.py
