[project]
name = "hexlet-code"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dj-database-url>=2.3.0",
    "django-bootstrap5>=24.3",
    "django>=5.1.6",
    "gunicorn>=23.0.0",
    "psycopg2-binary>=2.9.10",
    "python-dotenv>=1.0.1",
    "whitenoise>=6.9.0",
    "django-filter>=25.1",
    "rollbar>=1.2.0",
    "coverage>=7.6.12",
]

[dependency-groups]
dev = [
    "ruff>=0.9.6",
]
