[project]
name = "hexlet-code"
version = "0.1.0"
description = "task_manager"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dj-database-url>=2.3.0",
    "django-bootstrap5>=24.3",
    "django>=5.1.6",
    "gunicorn>=23.0.0",
    "psycopg2-binary>=2.9.10",
    "python-dotenv>=1.0.1",
    "whitenoise>=6.9.0",
    "django-filter>=25.1",
    "rollbar>=1.2.0",
    "coverage>=7.6.12",
    "pytest-django>=4.10.0",
]

[dependency-groups]
dev = [
    "ruff>=0.9.6",
]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "task_manager.settings"
# -- recommended but optional:
python_files = ["test_*.py", "*_test.py", "testing/python/*.py"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["task_manager"]